[package]
name = "nt"
version = "3.0.0"
authors = ["Redrield <redrield@gmail.com>"]
description = "A NetworkTables revision 3 library for Rust"
license = "MIT"
repository = "https://github.com/first-rust-competition/nt-rs"
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5"
multimap = "0.5"
url = { version = "2.1" }
tokio-tungstenite = { version = "0.11", features = ["stream"] }
thiserror = "1.0"
anyhow = "1.0.33"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
rmp-serde = "0.14.4"
rmpv = "0.4.5"
futures = "0.3.6"
async-trait = "0.1.41"
chrono = { version = "0.4.19", optional = true }
log = "0.4.11"
itertools = "0.9.0"
rand = "0.7.3"

[dev-dependencies]
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.19"
