[package]
name = "nt-network"
version = "1.0.1"
authors = ["Redrield <redrield@gmail.com>"]
description = "Networking types and codecs for nt-rs"
repository = "https://gitlab.com/Redrield/nt-rs"
license = "MIT"
edition = "2018"

[dependencies]
bytes = "0.4.12"
failure = "0.1.5"
crossbeam-channel = "0.3.8"
futures = "0.1.27"
tokio-codec = "0.1.1"
wasm-bindgen = { version = "0.2.45", optional = true }

[dependencies.nt-leb128]
version = "0.2.4"
default-features = false
features = ["use-bytes"]


