[package]
name = "nt-network"
version = "2.0.0"
authors = ["Redrield <redrield@gmail.com>"]
description = "Networking types and codecs for nt-rs"
repository = "https://gitlab.com/Redrield/nt-rs"
license = "MIT"
edition = "2018"

[dependencies]
bytes = "0.5.2"
failure = "0.1.5"
crossbeam-channel = "0.3.8"
futures = "0.1.27"
tokio-util = { version = "0.2.0", features = ["codec"] }
wasm-bindgen = { version = "0.2.45", optional = true }
nt-leb128 = "0.3.1"


