[package]
name = "nt-network"
version = "3.0.0"
authors = ["Redrield <redrield@gmail.com>"]
description = "Networking types and codecs for nt-rs"
repository = "https://gitlab.com/Redrield/nt-rs"
license = "MIT"
edition = "2018"

[dependencies]
bytes = "0.5.2"
futures = "0.1.27"
tokio-util = { version = "0.2.0", features = ["codec"] }
wasm-bindgen = { version = "0.2.45", optional = true }
nt-leb128 = "0.3.1"
anyhow = "1.0"
thiserror = "1.0"


