[package]
name = "nt-packet-derive"
version = "0.1.0"
authors = ["Redrield <redrield@gmail.com>"]

description = "Crate containing proc macro derives for nt-s"
license = "MIT"
repository = "https://gitlab.com/Redrield/nt-rs"

[lib]
proc-macro = true

[dependencies]
nt-packet = "0.1.0"
syn = "0.14.7"
quote = "0.6.5"
proc-macro2 = "0.4.9"
