[package]
name = "nt-packet-derive"
version = "0.1.4"
authors = ["Redrield <redrield@gmail.com>"]

description = "Crate containing proc macro derives for nt-rs"
license = "MIT"
repository = "https://gitlab.com/Redrield/nt-rs"

[lib]
proc-macro = true

[dependencies]
nt-packet = "0.1.2"
syn = "0.14.7"
quote = "0.6.5"
proc-macro2 = "0.4.9"
