[package]
name = "nt-packet"
version = "0.1.1"
authors = ["Rhys Kenwell <redrield@gmail.com>"]

description = "Crate containing traits core to nt-rs"
license = "MIT"
repository = "https://gitlab.com/Redrield/nt-rs"

[dependencies]
bytes = "0.4.9"
failure = "0.1.2"

[dependencies.nt-leb128]
version = "0.2.4"
default-features = false
features = ["use-bytes"]

