[package]
name = "nt-ws"
version = "0.1.1"
description = "A client-side web NetworkTables rev. 3 client"
repository = "https://gitlab.com/Redrield/nt-rs"
license = "MIT"
authors = ["Redrield <redrield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nt-network = { version = "1.0.0", features = ["wasm-bindgen"] }
stdweb = { version = "0.4.17", features = ["futures-support", "experimental_features_which_may_break_on_minor_version_bumps"] }
bytes = "0.4.12"
failure = "0.1.5"
tokio-codec = "0.1.1"
futures-preview = { version = "0.3.0-alpha.16" }
crossbeam-channel = "0.3.8"
multimap = "0.5.0"
wasm-bindgen = "0.2.45"
js-sys = "0.3.22"
wasm-bindgen-futures = { version = "0.3.22", features = ["futures_0_3"] }
